update websocket path and v2fly version

--- a/v2ray/config/config.json
+++ b/v2ray/config/config.json
@@ -20,7 +20,7 @@
         "network": "ws",
         "_security": "tls",
         "wsSettings": {
-          "path": "/ws"
+          "path": "/BIMN98poQAZ"
         }
       },
       "mux": {
