--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -6,10 +6,10 @@
     header Upgrade    websocket
   }
 
-  reverse_proxy @websockets v2ray:1310/ws
+  reverse_proxy @websockets v2ray:1310/BIMN98poQAZ
 
   route {
-    reverse_proxy /ws v2ray:1310
+    reverse_proxy /BIMN98poQAZ v2ray:1310
     file_server
   }
 
